<package>
  <name>tracked_gazebo</name>
  <version>0.1.0</version>
  <description>tracked_gazebo</description>

  <license>BSD</license>
  <maintainer email="m.kitani.810@nitech.jp">Makoto Kitani</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>tracked_control</run_depend>
  <run_depend>tracked_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
